index.html changed

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html"%}
 {% block heading%}
-second page
+first page
 {% end block%}
 
 <p>Some XXXXXXXXXXXXXXXXXXXXXXXXXXXXX</p>
